# ML_withFASTApi

./: .dockerignore  README.md  dockerfile  frontend.py  main.py  pyproject.toml  requirements.txt
model/: predict.py
schema/: user_input.py
