[project]
name = "ml-withfastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn==1.6.1",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]
